--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,18 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.app_repatidor_v2">
-    <!-- io.flutter.app.FlutterApplication is an android.app.Application that
-         calls FlutterMain.startInitialization(this); in its onCreate method.
-         In most cases you can leave this as-is, but you if you want to provide
-         additional functionality it is fine to subclass or reimplement
-         FlutterApplication and put your custom class here. -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <application
-        android:name="io.flutter.app.FlutterApplication"
-        android:label="app_repatidor_v2"
-        android:showWhenLocked="true"
-        android:turnScreenOn="true"
+    package="com.example.app_repartidor_v3">
+   <application
+        android:label="app_repartidor_v3"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
@@ -43,9 +32,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBmphvpedTCBZvDDW3MEVknSowfl7O-v3Y"/>
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyBmphvpedTCBZvDDW3MEVknSowfl7O-v3Y"/>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
