--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: app_repatidor_v2
-description: App Repatidor de JP Version 2
+name: app_repartidor_v3
+description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -27,65 +27,27 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  map_launcher: ^1.1.1
-  searchable_dropdown: ^1.1.3
-  convex_bottom_bar: ^2.6.0
-  awesome_dialog: ^1.2.1
-  flutter_easyloading: ^2.2.1
-  sync_http: ^0.2.0
-  qr_code_scanner: ^0.2.1
-  flutter_polyline_points: ^0.2.4
-  geocoding: ^1.0.5
-  google_map_location_picker: ^4.1.2+1
-  curved_navigation_bar: ^0.3.7
-  community_material_icon: ^5.4.55
-  flutter_touch_spin: ^1.0.1
-  basic_utils: ^2.6.3
-  local_auth: ^0.6.3+4
-  toast: ^0.1.5
-  google_maps_webservice: ^0.0.18
-  flutter_icons: ^1.1.0
-  font_awesome_flutter: ^8.11.0
-  google_maps_flutter: ^1.0.6
-  geolocator: ^6.1.13
-  geolocator_platform_interface: ^1.0.8
-  google_fonts: ^1.1.1
-  flutter_local_notifications: ^3.0.2
-  flutter_local_notifications_platform_interface: ^2.0.0+1
-  supercharged: ^1.12.0
-  supercharged_dart: ^1.4.0
-  badges: ^1.1.6
-  open_iconic_flutter: ^0.3.0
-  geocoder: ^0.2.1
-  shared_preferences: ^0.5.7+3
-  barcode_scan: any
-  responsive_grid: ^1.2.1+1
-  rxdart: ^0.24.1
-  flutter_map: ^0.9.0
+  cupertino_icons: ^1.0.2
+  rxdart: ^0.26.0
   http:
+  shared_preferences: ^2.0.4
   smart_select: ^4.3.2
-  provider: ^4.3.2+2
+  google_maps_flutter: ^2.0.1
+  path_provider: ^2.0.1
+  barcode_scan_fix: ^1.0.2
   async_builder: ^1.2.0
+  font_awesome_flutter: ^8.12.0
+  toast: ^0.1.5
   getwidget: ^1.2.4
-  location: ^3.0.0
-  spinner_input: ^0.1.2
-  dropdown_search: ^0.4.8
-  extended_tabs: ^1.0.1
-  path_provider: ^1.6.24
-  expansion_tile_card: ^1.1.0
-  flutter_number_picker: ^0.0.8
-  persistent_bottom_nav_bar: any
-  extended_list: ^2.0.2
-  web_socket_channel: ^1.1.0
-  workmanager: ^0.2.0
-  cool_stepper: ^1.1.3
-  flutter_styled_toast: ^1.4.0+1
-  firebase_messaging: ^5.1.4
+  google_map_location_picker: ^4.1.2+1
   dart_rut_validator: ^1.1.0
   auto_size_text: ^2.1.0
-
-
+  cool_stepper: ^1.1.3
+  location:
+  map_launcher: ^1.1.1
+  flutter_number_picker: ^0.0.8
+  flutter_localizations:
+    sdk: flutter
 dev_dependencies:
   flutter_test:
     sdk: flutter
